# files-all-in-one

./: .coverage  .gitignore  PROJECT_SNAPSHOT.md  README.md  项目快照_2025-12-06_1702.md
app/: DBsettings.py  Faio.db  Faio.db-shm  Faio.db-wal  amberday.db  amberday.db-shm  amberday.db-wal  app.py  db_init.py  main.py  models.py  pyproject.toml
app/desktop/: __init__.py  bridge.py  topMenu.py
app/migrations/models/: 0_20251129220751_init.py  0_20251130021717_init.py
app/routers/: anchor.py  backup.py  checkData.py  folder.py  log.py  tag.py  test.py  useSetting.py  view.py
app/static/: README.md  index.html
app/static/assets/: AboutView-A6jD_HpJ.js  AboutView-C9J_G-i3.js  AboutView-uu9-LVV5.js  index-Co8nW0yn.js  index-Dv26naNa.css  index-XwcCctFb.js  index-xBa-8J5C.js
app/utils/: __init__.py  operation_log.py
reports/: test_report.html
tests/: conftest.py  load_test.py  test.py  test2.py  test_anchors.py  test_backup.py  test_folders.py  test_integration.py  test_logs.py  test_settings.py  test_tags.py
web/: README.md  components.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/components/anchors/: AnchorDetail.vue  AnchorTable.vue
web/src/components/layout/: FolderTabs.vue  FolderTree.vue  FunctionMenu.vue  TagManager.vue  TopMenu.vue
web/src/router/: index.ts
web/src/stores/: settings.ts
web/src/types/: ui.ts
web/src/views/: AboutView.vue  HomeView.vue  SettingView.vue
