[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pywebview>=6.1",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.38.0",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
